hphp/hack/test/typecheck/typing_ok_xhp.php.exp
File "typing_ok_xhp.php", line 21, characters 29-30:
XHP children must be compatible with XHPChild (Typing[4193])
File "typing_ok_xhp.php", line 19, characters 15-19:
This is a mixed value
